@@ -293,37 +293,37 @@
 
 		<p class="peragraph p-class subhead-u">U-Haul Moving Truck Rentals</p>
 
-		<p class="peragraph p-class">Whether you're embarking on your first move or are a seasoned mover, Willow Wood Storage Centers in partnership with U-Haul offers you the perfect moving solutions. U-Haul, known for its extensive fleet and affordable prices, provides you with the Right Equipment at the Lowest Cost to meet all your moving needs. Our trucks are designed with your convenience and efficiency in mind.</p>
+		<p class="peragraph p-class">At Willow Wood Storage Centers, we proudly serve as an authorized U-Haul dealer, providing you with convenient access to U-Haul's comprehensive fleet of rental trucks. Whether you're planning a local move or a long-distance relocation, our partnership with U-Haul ensures you have access to reliable, well-maintained vehicles designed specifically for your moving needs.</p>
 
 		<p class="peragraph p-class subhead-u">Benefits of U-Haul Rental Trucks</p>
 
 		<p class="peragraph p-class subhead">- Easier Loading: </p>
-		<p class="peragraph p-class">U-Haul rental trucks are designed to be 50% easier to load, thanks to their low deck and wide, stable EZ-Load Ramp.</p>
+		<p class="peragraph p-class">U-Haul rental trucks feature innovative designs that make loading 50% easier, with low decks and wide, stable EZ-Load Ramps for effortless access.</p>
 		  
 		<p class="peragraph p-class subhead-u">- Smooth Ride: </p>
-		<p class="peragraph p-class">Experience a smooth journey with our Gentle-Ride suspension and aerodynamic styling, ensuring your delicate household furniture stays secure and protected.</p>
+		<p class="peragraph p-class">Experience a comfortable journey with U-Haul's Gentle-Ride suspension system and aerodynamic styling that protects your belongings during transport.</p>
 		  
 		<p class="peragraph p-class subhead-u">- Comfortable Cab: </p>
-		<p class="peragraph p-class">Enjoy a quiet, easy-riding, pickup-styled cab with independent seating for three, providing individual comfort for both the driver and passenger.</p>
+		<p class="peragraph p-class">Enjoy a quiet, spacious cab with independent seating for three passengers, providing comfort for you and your moving crew.</p>
 		  
-		<p class="peragraph p-class subhead-u">- Convenience and Accessibility*: </p>
-		<p class="peragraph p-class">With more than 20,000 locations across the US and Canada, U-Haul offers convenient pickup and return options. Our trucks run on cheaper, cleaner, and easily accessible unleaded fuel.</p>
+		<p class="peragraph p-class subhead-u">- Convenience and Accessibility: </p>
+		<p class="peragraph p-class">With over 20,000 locations across the US and Canada, U-Haul offers unparalleled convenience for pickup and return. All trucks run on standard unleaded fuel for easy refueling.</p>
 		  
 		<p class="peragraph p-class subhead-u">One-Way Truck Rentals</p>
 
-		<p class="peragraph p-class">Planning a one-way move? U-Haul has you covered with over 20,000 rental locations spread across North America. Save time and money with our seamless one-way truck rental service.</p>
+		<p class="peragraph p-class">For one-way moves, U-Haul's extensive network of over 20,000 locations across North America makes it simple and cost-effective to drop off your rental at your destination.</p>
 
 		<p class="peragraph p-class subhead-u">The Right Equipment for Your Move</p>
 
-		<p class="peragraph p-class">U-Haul collaborates with manufacturers to craft trucks specifically designed for household moving. Our trucks are built lower to the ground, featuring rounded corners, chassis skirts, and comfort cabs for easy loading and a comfortable driving experience. Efficiency on fuel is also a top priority.</p>
+		<p class="peragraph p-class">U-Haul works directly with manufacturers to create trucks specifically engineered for household moving. Our vehicles feature lower ground clearance, rounded corners, protective chassis skirts, and comfortable cabs designed for optimal loading efficiency and fuel economy.</p>
 
-		<p class="peragraph p-class subhead-u">It’s all About Safety</p>
+		<p class="peragraph p-class subhead-u">Your Safety is Our Priority</p>
 
-		<p class="peragraph p-class">Your safety is our priority. All U-Haul trucks, 15' and larger, plus our pickup trucks, are equipped with seat belts for three passengers. Our cargo vans and 10' trucks feature comfortable bucket seats with seat belts for two. Patented mirrors and spacious cabs ensure better visibility and added comfort while driving.</p>
+		<p class="peragraph p-class">Safety is paramount at Willow Wood Storage Centers. All U-Haul trucks 15' and larger, plus our pickup trucks, are equipped with seat belts for three passengers. Our cargo vans and 10' trucks feature comfortable bucket seats with seat belts for two. Patented mirror systems and spacious cabs provide excellent visibility and driving comfort.</p>
 
-		<p class="peragraph p-class">Explore our wide range of U-Haul rental trucks and choose the perfect fit for your upcoming move.</p>
+		<p class="peragraph p-class">We invite you to explore our selection of U-Haul rental trucks and discover the perfect vehicle for your upcoming move. Our knowledgeable team is here to help you choose the right equipment and answer any questions you may have.</p>
 
-		<p class="peragraph p-class">For bookings and inquiries, contact Willow Wood Storage Centers - Your Trusted U-Haul Authorized Center.</p>
+		<p class="peragraph p-class">Contact Willow Wood Storage Centers today to reserve your U-Haul rental truck and experience the convenience of working with a trusted, authorized dealer.</p>
 
 
 	<br />
@@ -351,7 +351,7 @@
                 </h2>
  
                 <ul style="color: #ffffff;padding: 25px 0px 0px;">
-				  <p>3647 South 3rd Street<br />Ironton, OH 45638 </p>
+				  <p>3645 South 3rd Street<br />Ironton, OH 45638 </p>
                   <p class="normal-text">Call us: (740) 646-0496</p>
                 </ul>
             </div>
